--- a/Revisar_PEMs.ipynb
+++ b/Revisar_PEMs.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NoteBook de Referencia para hacer revisión de PEMs en los Casos Base\n",
+    "\n",
+    "La finalidad de este ejercicio es proponer una manera en la que puedan hacerse revisiones/validaciones de proyectos que deban estar modelados en la base de datos del PSS/E.\n",
+    "\n",
+    "Para ello se crea un archivo <**PEMS.py**> que contiene las funciones que realizan la comprobación de las obras (están o no en el caso _.sav_). Se tienen tres tipos de validación con las cuales se pueden verificar prácticamente todas las obras instruidas de la RNT y las RGD:\n",
+    "\n",
+    "1. Verificar la existencia de Buses <_número y nombre_>\n",
+    "2. Verificar la existencia de Ramas <_líneas y transformadores de dos devanados_>\n",
+    "3. Verificar la existencia de Shunts <_reactores y capacitores_>\n",
+    "\n",
+    "Para cada PEM, utilizando las posibles verificaciones que se proponen, se puede corroborar si se encuentran o no modeladas en el caso. De tal manera que se identifiquen posibles errores en el modelo. Por ejemplo:\n",
+    "\n",
+    "- Para verificar una obra que involucra un trnasformador de 3 devanados, se puede buscar el Bus terciario que se genera con la entrada de este proyecto.\n",
+    "- Para verificar un transformador de 2 devanados, se puede buscar el enlace entre los buses de alta y baja del transformador, así como su ID.\n",
+    "- Para verificar un compensador estático de var o STATCOM se puede buscar alguno(s) de los buses que se generan para su modelo.\n",
+    "...\n",
+    "\n",
+    "En el archivo <**PEMS.py**>, al principio, se encuentran las tres funciones que realizan la búsqueda de _BUSSES_, _RAMAS_ y _SHUNTS_ de forma que para cada PEM que se quiera verificar, se utilicen a conveniencia, indicándo que elementos debe buscar en la base de datos a revisar. En ese mismo archivo, se define una función para cada **PEM** que se quiere revisar,ya que en cada uno las consultas pueden ser diferentes. Al principio de cada función de **PEM** se incluye el alcance de las obras y la forma en que se verifica que esté modelado por completo."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -14,7 +38,7 @@
       "        Example, for PSSE 35.0.x, use this as: psse35.set_minor(0)\n",
       "\n",
       " Input error detected at !\n",
-      " -m ipykernel_launcher --ip=127.0.0.1 --stdin=9008 --control=9006 --hb=9005 \"--Session.signature_scheme=\\\"hmac-sha256\\\"\" \"--Session.key=b\\\"d13032ab-8fc9-4c96-ac9b-b3a0b19262a0\\\"\" --shell=9007 \"--transport=\\\"tcp\\\"\" --iopu\n",
+      " -m ipykernel_launcher --ip=127.0.0.1 --stdin=9003 --control=9001 --hb=9000 \"--Session.signature_scheme=\\\"hmac-sha256\\\"\" \"--Session.key=b\\\"fe2df412-e42f-4fba-8b0b-43a30742342c\\\"\" --shell=9002 \"--transport=\\\"tcp\\\"\" --iopu\n",
       "                                                                                                          !\n",
       "\n",
       " PSS(R)E Version 35\n",
@@ -33,7 +57,7 @@
       "\n",
       "      50000 BUS POWER SYSTEM SIMULATOR--PSS(R)E-35.3.3\n",
       "\n",
-      "             INITIATED ON FRI, AUG 12 2022  12:24\n"
+      "             INITIATED ON FRI, AUG 12 2022  12:34\n"
      ]
     },
     {
@@ -95,7 +119,7 @@
     "CASOS_PATH = \"./casos/\" # Ruta donde se guardan los archivos .sav (de acuerdo con la estructura del repositorio)\n",
     "casos_sav = os.listdir(CASOS_PATH) # Genera una lista con los nombres de los archivos dentro de la carpeta\n",
     "\n",
-    "psspy.case(os.path.abspath(\"casos/\" + casos_sav[0])) # Obtiene el caso en la ubicación: [PATH de este NoteBook]/casos/[primer archivo que encuentre en la carpeta]\n",
+    "psspy.case(os.path.abspath(\"casos/\" + casos_sav[0])) # Obtiene el primer caso de la lista en la ubicación: [PATH de este NoteBook]/casos/[primer archivo que encuentre en la carpeta]\n",
     "\n",
     "# Se define un subsistema que abarca todos los elementos las áreas 3,5 y 6\n",
     "#  \n",
@@ -120,16 +144,6 @@
       "Enlace: 33032-73-33036 ok\n",
       "-----------------------------\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'PEM P16-OC2 revisado'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -154,16 +168,6 @@
       "Shunt: 34112/QRO-115(OC) ok\n",
       "-----------------------------\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'PEM P18-OC9 revisado'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
