--- a/Intro_NB.ipynb
+++ b/Intro_NB.ipynb
@@ -1163,7 +1163,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit",
+   "display_name": "Python 3.9.13 ('pss')",
    "language": "python",
    "name": "python3"
   },
@@ -1182,7 +1182,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "26144f71227b8c895032d41093ca1234c525aec6b0760de2e60002c28d973735"
+    "hash": "84b002ad55c7e294b389aea68ad9e0b7557cde9a9ac8af7563fa0a0685887174"
    }
   }
  },
