--- a/Revisar_PEMs.ipynb
+++ b/Revisar_PEMs.ipynb
@@ -38,7 +38,7 @@
       "        Example, for PSSE 35.0.x, use this as: psse35.set_minor(0)\n",
       "\n",
       " Input error detected at !\n",
-      " -m ipykernel_launcher --ip=127.0.0.1 --stdin=9003 --control=9001 --hb=9000 \"--Session.signature_scheme=\\\"hmac-sha256\\\"\" \"--Session.key=b\\\"fe2df412-e42f-4fba-8b0b-43a30742342c\\\"\" --shell=9002 \"--transport=\\\"tcp\\\"\" --iopu\n",
+      " -m ipykernel_launcher --ip=127.0.0.1 --stdin=9003 --control=9001 --hb=9000 \"--Session.signature_scheme=\\\"hmac-sha256\\\"\" \"--Session.key=b\\\"6f2f9d47-4c2a-4578-bbf7-7896ca8ed24f\\\"\" --shell=9002 \"--transport=\\\"tcp\\\"\" --iopu\n",
       "                                                                                                          !\n",
       "\n",
       " PSS(R)E Version 35\n",
@@ -57,7 +57,7 @@
       "\n",
       "      50000 BUS POWER SYSTEM SIMULATOR--PSS(R)E-35.3.3\n",
       "\n",
-      "             INITIATED ON FRI, AUG 12 2022  12:34\n"
+      "             INITIATED ON MON, AUG 22 2022  17:10\n"
      ]
     },
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -197,12 +197,29 @@
       "Shunt: 34114/NTA-115(OC) ok\n",
       "Shunt: 34160/CIM-115(OC) ok\n",
       "Shunt: 34112/QRO-115(OC) ok\n",
+      "-----------------------------\n",
+      "PEM P15-NT1\n",
+      "Bus: 549970 ok\n",
+      "-----------------------------\n",
+      "PEM P17-NT2\n",
+      "Bus: 55901 ok\n",
+      "Shunt: 5536/NCG-115(NT) ok\n",
+      "-----------------------------\n",
+      "PEM P16-NT1\n",
+      "Bus: 51854 ok\n",
+      "Enlace: 5058-NT-5031 ok\n",
+      "Enlace: 5090-NT-5060 ok\n",
+      "Enlace: 5090-NT-5058 ok\n",
+      "Enlace: 5060-NT-5039 ok\n",
+      "Enlace: 5068-NT-5039 ok\n",
+      "Enlace: 5058-NT-5060 ok\n",
+      "Lista de ENLACES_IN vacía o con error: 0\n",
       "-----------------------------\n"
      ]
     }
    ],
    "source": [
-    "PEMS_2023 = [P16_OC2(),P18_OC9()]"
+    "PEMS_2023 = [P16_OC2(),P18_OC9(),P15_NT1(),P17_NT2(),P16_NT1()]"
    ]
   }
  ],
