Final de flujos

--- a/Flujos por elementos.ipynb
+++ b/Flujos por elementos.ipynb
@@ -59,7 +59,7 @@
       "        Example, for PSSE 35.0.x, use this as: psse35.set_minor(0)\n",
       "\n",
       " Input error detected at !\n",
-      " -m ipykernel_launcher --ip=127.0.0.1 --stdin=9008 --control=9006 --hb=9005 \"--Session.signature_scheme=\\\"hmac-sha256\\\"\" \"--Session.key=b\\\"913510d9-afff-4551-8de4-ef6bb8814175\\\"\" --shell=9007 \"--transport=\\\"tcp\\\"\" --iopu\n",
+      " -m ipykernel_launcher --ip=127.0.0.1 --stdin=9044 --control=9042 --hb=9041 \"--Session.signature_scheme=\\\"hmac-sha256\\\"\" \"--Session.key=b\\\"9b717dfa-d06c-4777-8ef3-9346f29cc421\\\"\" --shell=9043 \"--transport=\\\"tcp\\\"\" --iopu\n",
       "                                                                                                          !\n",
       "\n",
       " PSS(R)E Version 35\n",
@@ -76,14 +76,15 @@
       "\n",
       "           SIEMENS POWER TECHNOLOGIES INTERNATIONAL\n",
       "\n",
-      "      50000 BUS POWER SYSTEM SIMULATOR--PSS(R)E-35.3.3\n",
+      "      50000 BUS POWER SYSTEM SIMULATOR--PSS(R)E-35.0.0\n",
       "\n",
-      "             INITIATED ON FRI, AUG 26 2022  18:26\n"
+      "             INITIATED ON SAT, AUG 27 2022  15:11\n"
      ]
     }
    ],
    "source": [
-    "from lib_psse39 import *\n",
+    "#from lib_psse39 import * # Para intérprete de Python 3.9 \n",
+    "from lib_psse37 import * # Para intérprete de Python 3.7 \n",
     "from src.funcs35 import *"
    ]
   },
@@ -93,7 +94,17 @@
    "source": [
     "### Leer los casos y realizar la corrección de topología (quitar la obra del PEM P18-NE2)\n",
     "\n",
-    "**NOTA: El código de la siguiente celda solo se debería ejecutar si el PEM P18-NE2 se encuentra modelado en los casos.**"
+    "**NOTA: El código de las siguientes dos celdas solo se debería ejecutar si el PEM P18-NE2 se encuentra modelado en los casos.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CASOS_PATH = \"./casos/2023_20Hinvierno/\" # Ruta donde se guardan los archivos .sav (de acuerdo con la estructura del repositorio)\n",
+    "casos_sav = os.listdir(CASOS_PATH) # Genera una lista con los nombres de los casos"
    ]
   },
   {
@@ -127,80 +138,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "LIN_NOM = ['RAP - DMD',\n",
-    "           'RAP - SLR']\n",
-    "LINEAS = ['640099-640004-5D',\n",
-    "          '640099-640004-ET']"
+    "CASOS_PATH = \"./casos/2023_20Hinvierno/\" # Ruta donde se guardan los archivos .sav (de acuerdo con la estructura del repositorio)\n",
+    "casos_sav = os.listdir(CASOS_PATH) # Genera una lista con los nombres de los casos\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ELEM_NOM = ['RAP - DMD',\n",
+    "           'RAP - SLR',\n",
+    "           'TR-1 SAL',\n",
+    "           'TR-2 SAL',\n",
+    "           'TR-1 RAP']\n",
+    "\n",
+    "ELEM = ['640004-32277-G1',\n",
+    "        '640004-640099-5D',\n",
+    "        '640003-02',\n",
+    "        '640003-03',\n",
+    "        '640004-01'] #,'4455-44567-ER']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'casos_sav' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\10243\\Desktop\\PSSE\\Flujos por elementos.ipynb Celda 8\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/10243/Desktop/PSSE/Flujos%20por%20elementos.ipynb#X13sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m psspy\u001b[39m.\u001b[39mcase(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mabspath(\u001b[39m\"\u001b[39m\u001b[39mcasos/2023_20Hinvierno/\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m casos_sav[\u001b[39m0\u001b[39m]))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/10243/Desktop/PSSE/Flujos%20por%20elementos.ipynb#X13sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m ierr \u001b[39m=\u001b[39m psspy\u001b[39m.\u001b[39mbsys(\u001b[39m0\u001b[39m,\u001b[39m1\u001b[39m,[\u001b[39m400\u001b[39m,\u001b[39m400\u001b[39m],\u001b[39m2\u001b[39m,[\u001b[39m3\u001b[39m,\u001b[39m6\u001b[39m],\u001b[39m0\u001b[39m,[],\u001b[39m0\u001b[39m,[],\u001b[39m0\u001b[39m,[])\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'casos_sav' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      " The Saved Case in file d:\\CENACE\\PSSE\\casos\\2023_20Hinvierno\\5-C15_2027_PRIFS20H_OCC_NTE_NES - copia (2).sav was saved on SAT, AUG 27 2022  13:02\n",
+      "\n",
+      "\n",
+      "\n",
+      " The Saved Case in file d:\\CENACE\\PSSE\\casos\\2023_20Hinvierno\\5-C15_2027_PRIFS20H_OCC_NTE_NES - copia.sav was saved on SAT, AUG 27 2022  13:02\n",
+      "\n",
+      "\n",
+      "\n",
+      " The Saved Case in file d:\\CENACE\\PSSE\\casos\\2023_20Hinvierno\\5-C15_2027_PRIFS20H_OCC_NTE_NES.sav was saved on SAT, AUG 27 2022  13:02\n"
      ]
     }
    ],
    "source": [
-    "CASOS_PATH = \"./casos/2023_20Hinvierno/\" # Ruta donde se guardan los archivos .sav (de acuerdo con la estructura del repositorio)\n",
-    "casos_sav = os.listdir(CASOS_PATH) # Genera una lista con los nombres de los casos\n",
-    "\n",
-    "psspy.case(os.path.abspath(\"casos/2023_20Hinvierno/\" + casos_sav[0]))\n",
-    "ierr = psspy.bsys(0,1,[400,400],2,[3,6],0,[],0,[],0,[])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = dic_flujos()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Busca los valores de los enlaces deseados\n",
-    "f = []\n",
-    "for linea in LINEAS:\n",
-    "    try:\n",
-    "        f.append(d[linea])\n",
-    "    except:\n",
-    "        print(\"Enlace \", linea, \"no encontrado en el caso o subsistema\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "caso_dic = {}\n",
     "for caso in casos_sav:\n",
-    "    psspy.case(os.path.abspath(\"casos/2023_20Hinvierno\" + caso))\n",
-    "    "
+    "    psspy.case(os.path.abspath(\"casos/2023_20Hinvierno/\" + caso))\n",
+    "    d = dic_flujos(0,[400,400],[3,6])\n",
+    "    FL = []\n",
+    "    for linea in ELEM:\n",
+    "        try:\n",
+    "            FL.append(d[linea][0])\n",
+    "        except:\n",
+    "            print(\"Enlace \", linea, \"no encontrado en el caso o subsistema\")\n",
+    "    caso_dic[caso] = FL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RAP - DMD</th>\n",
+       "      <th>RAP - SLR</th>\n",
+       "      <th>TR-1 SAL</th>\n",
+       "      <th>TR-2 SAL</th>\n",
+       "      <th>TR-1 RAP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5-C15_2027_PRIFS20H_OCC_NTE_NES - copia (2).sav</th>\n",
+       "      <td>539.560791</td>\n",
+       "      <td>518.914062</td>\n",
+       "      <td>51.319546</td>\n",
+       "      <td>51.319546</td>\n",
+       "      <td>224.8909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5-C15_2027_PRIFS20H_OCC_NTE_NES - copia.sav</th>\n",
+       "      <td>539.560791</td>\n",
+       "      <td>518.914062</td>\n",
+       "      <td>51.319546</td>\n",
+       "      <td>51.319546</td>\n",
+       "      <td>224.8909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5-C15_2027_PRIFS20H_OCC_NTE_NES.sav</th>\n",
+       "      <td>539.560791</td>\n",
+       "      <td>518.914062</td>\n",
+       "      <td>51.319546</td>\n",
+       "      <td>51.319546</td>\n",
+       "      <td>224.8909</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  RAP - DMD   RAP - SLR  \\\n",
+       "5-C15_2027_PRIFS20H_OCC_NTE_NES - copia (2).sav  539.560791  518.914062   \n",
+       "5-C15_2027_PRIFS20H_OCC_NTE_NES - copia.sav      539.560791  518.914062   \n",
+       "5-C15_2027_PRIFS20H_OCC_NTE_NES.sav              539.560791  518.914062   \n",
+       "\n",
+       "                                                  TR-1 SAL   TR-2 SAL  \\\n",
+       "5-C15_2027_PRIFS20H_OCC_NTE_NES - copia (2).sav  51.319546  51.319546   \n",
+       "5-C15_2027_PRIFS20H_OCC_NTE_NES - copia.sav      51.319546  51.319546   \n",
+       "5-C15_2027_PRIFS20H_OCC_NTE_NES.sav              51.319546  51.319546   \n",
+       "\n",
+       "                                                 TR-1 RAP  \n",
+       "5-C15_2027_PRIFS20H_OCC_NTE_NES - copia (2).sav  224.8909  \n",
+       "5-C15_2027_PRIFS20H_OCC_NTE_NES - copia.sav      224.8909  \n",
+       "5-C15_2027_PRIFS20H_OCC_NTE_NES.sav              224.8909  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado = pd.DataFrame(caso_dic).transpose()\n",
+    "resultado.set_axis(ELEM_NOM, axis=1, inplace=True)\n",
+    "resultado"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('psspy39')",
+   "display_name": "Python 3.7.3 ('psspy37')",
    "language": "python",
    "name": "python3"
   },
@@ -214,12 +310,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.3"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3c6c54cd06a4ef50c6524d03d7762564c20173591bec6d09845b169cc987a52c"
+    "hash": "730960a639850ff1a19b2752bee2e9f855e7694bb69699136642afcbd4c8ad5a"
    }
   }
  },
